--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,10 @@
   <groupId>com.bridgelabz</groupId>
   <artifactId>AddressBookSystem</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <name>AddressBookSystemmm</name>
+  <!-- FIXME change it to the project's website -->
+  <url>http://www.example.com</url>
+ 
  <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -10,6 +14,32 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    
+     <!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+	<dependency>
+	    <groupId>com.opencsv</groupId>
+	    <artifactId>opencsv</artifactId>
+	    <version>4.0</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.json/json -->
+	<dependency>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20210307</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+	<dependency>
+	    <groupId>com.google.code.gson</groupId>
+	    <artifactId>gson</artifactId>
+	    <version>2.8.9</version>
+	</dependency>
+<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.27</version>
+</dependency>
+
     <dependency>
   <groupId>com.opencsv</groupId>
   <artifactId>opencsv</artifactId>
